Add swagger doc for resource type patch and delete
